--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -47,15 +47,15 @@
                     <ion-item lines="none">
                       <ion-input  formControlName="pass1" type="password" name="pass1" placeholder="Your active password" [(ngModel)]="pass1"></ion-input>
                       <div *ngIf="editperfilForm.controls['pass1'].valid">
-                        <a class="success">&#9989;</a>
+                        <ion-chip color="success">&#9989;</ion-chip>
                       </div>
                     </ion-item>
                     <div class="validation-errors">
                       <ng-container *ngFor="let validation of validation_messages.pass1" >
                         <div *ngIf="editperfilForm.get('pass1').hasError(validation.type) && (editperfilForm.get('pass1').dirty || editperfilForm.get('pass1').touched)">
-                          <div class="danger">
+                          <ion-label class="danger">
                             {{ validation.message }}
-                          </div>
+                          </ion-label>
                         </div>
                       </ng-container>
                     </div>
@@ -65,15 +65,15 @@
                     <ion-item lines="none">
                       <ion-input  formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password or if you dont want to change put the old password" [(ngModel)]="difpass"></ion-input>
                       <div *ngIf="editperfilForm.controls['difpass'].valid">
-                        <a class="success">&#9989;</a>
+                        <ion-chip color="success">&#9989;</ion-chip>
                       </div>
                     </ion-item>
                     <div class="validation-errors">
                       <ng-container *ngFor="let validation of validation_messages.difpass" >
                         <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                          <div class="danger">
+                          <ion-label class="danger">
                             {{ validation.message }}
-                          </div>
+                          </ion-label>
                         </div>
                       </ng-container>
                     </div>
@@ -104,15 +104,15 @@
                     <ion-item lines="none">
                       <ion-input  formControlName="mail" type="text" name="mail" placeholder="Mail" value={{mail}} [(ngModel)]="mail"></ion-input>
                       <div *ngIf="editperfilForm.controls['mail'].valid">
-                        <a class="success">&#9989;</a>
+                        <ion-chip color="success">&#9989;</ion-chip>
                       </div>
                     </ion-item>
                     <div class="validation-errors">
                       <ng-container *ngFor="let validation of validation_messages.mail" >
                         <div *ngIf="editperfilForm.get('mail').hasError(validation.type) && (editperfilForm.get('mail').dirty || editperfilForm.get('mail').touched)">
-                          <div class="danger">
+                          <ion-label class="danger">
                             {{ validation.message }}
-                          </div>
+                          </ion-label>
                         </div>
                       </ng-container>
                     </div>
@@ -122,15 +122,15 @@
                     <ion-item lines="none">
                       <ion-input  formControlName="sexo" type="text" name="sexo" placeholder="Sexo" value={{user.sexo}} [(ngModel)]="sexo" ></ion-input>
                       <div *ngIf="editperfilForm.controls['sexo'].valid">
-                        <a class="success">&#9989;</a>
+                        <ion-chip color="success">&#9989;</ion-chip>
                       </div>
                     </ion-item>
                     <div class="validation-errors">
                       <ng-container *ngFor="let validation of validation_messages.sexo" >
                         <div *ngIf="editperfilForm.get('sexo').hasError(validation.type) && (editperfilForm.get('sexo').dirty || editperfilForm.get('sexo').touched)">
-                          <div class="danger">
+                          <ion-label class="danger">
                             {{ validation.message }}
-                          </div>
+                          </ion-label>
                         </div>
                       </ng-container>
                     </div>
@@ -140,15 +140,15 @@
                     <ion-item lines="none">
                       <ion-input  formControlName="edad" type="text" name="edad" placeholder="Edad" value={{user.edad}} [(ngModel)]="edad"></ion-input>
                       <div *ngIf="editperfilForm.controls['edad'].valid">
-                        <a class="success">&#9989;</a>
+                        <ion-chip color="success">&#9989;</ion-chip>
                       </div>
                     </ion-item>
                     <div class="validation-errors">
                       <ng-container *ngFor="let validation of validation_messages.edad" >
                         <div *ngIf="editperfilForm.get('edad').hasError(validation.type) && (editperfilForm.get('edad').dirty || editperfilForm.get('edad').touched)">
-                          <div class="danger">
+                          <ion-label class="danger">
                             {{ validation.message }}
-                          </div>
+                          </ion-label>
                         </div>
                       </ng-container>
                     </div>
