--- a/src/app/pages/chart/chart.page.html
+++ b/src/app/pages/chart/chart.page.html
@@ -15,6 +15,8 @@
   <h5><p>*Tamaño del bubble: experciencia acumulada </p></h5>
   <h4><p>Colocate encima de cada bubble para ver los datos </p></h4>
   </div>
-  <div id="bubbleChart" style="width: 900px; height: 500px;"></div>
+  <ion-content>
+    <div id="bubbleChart" style="width: 900px; height: 500px;"></div>
+  </ion-content>
 
 </ion-content>
