--- a/src/app/pages/main-tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/main-tabs/dashboard/dashboard.page.html
@@ -44,9 +44,9 @@
           <ion-row>
             <ion-col>
               <ion-card>
-                <ion-card-header>
+                <ion-card-header id="notificacionesCard">
                   <ion-card-title>
-                    Notificaciones y Chats
+                    Notificaciones
                   </ion-card-title>
                 </ion-card-header>
               </ion-card>
@@ -54,11 +54,24 @@
 
             <ion-col>
               <ion-card>
-                <ion-card-header>
+                <ion-card-header id="amigosCard">
                   <ion-card-title>
                     Tus Amigos
                   </ion-card-title>
                 </ion-card-header>
+                <ion-card-content>
+                  <ion-list>
+                    <ion-item *ngFor = "let amigo of listaAmigos" lines="none">
+                      <ion-avatar slot="start">
+                        <img [src]="path + amigo.rutaimagen">
+                      </ion-avatar>
+                      <ion-label><b>{{amigo.username}}</b></ion-label>
+                      <ion-button fill="clear" color="dark" (click)= "goUsuario(amigo)">
+                        <ion-icon slot="icon-only" name="enter-outline"></ion-icon>
+                      </ion-button>
+                    </ion-item>
+                  </ion-list>
+                </ion-card-content>
               </ion-card>
             </ion-col>
           </ion-row>
@@ -66,10 +79,10 @@
           <ion-row>
             <ion-col>
               <ion-card>
-                <ion-card-header><ion-card-title>Tus Partidos Activos</ion-card-title></ion-card-header>
+                <ion-card-header id="partidasCard"><ion-card-title>Tus Partidos Activos</ion-card-title></ion-card-header>
                 <ion-card-content>
                   <ion-list>
-                      <ion-card *ngFor = "let partida of listaPartidas; let i = index">
+                      <ion-card *ngFor = "let partida of listaPartidasActivas; let i = index">
                         <ion-card-header>Partido organizado por: <b>{{partida.organizador}}</b></ion-card-header>
                         <ion-card-content>
                           <h1><ion-badge color="secondary">{{partida.ubicacion}}</ion-badge></h1>
@@ -77,12 +90,12 @@
                             <ion-label *ngIf="partida.modo == 'i'">Individuales</ion-label>
                             <ion-label *ngIf="partida.modo == 'd'">Dobles</ion-label>
                           </ion-chip>
-                          <ion-chip outline color="success" *ngIf="partida.ganador===undefined">
+                          <ion-chip outline color="success" *ngIf="partida.ganador === undefined">
                             En Curso
                           </ion-chip>
-                          <ion-chip outline color="warning" *ngIf="partida.ganador!==undefined">
+                          <!-- ion-chip outline color="warning" *ngIf="partida.ganador!==undefined">
                             Ganado por: {{partida.ganador}}
-                          </ion-chip>
+                          </ion-chip-->
 
                           <!--ion-button fill="clear" color="success" size="large" (click)= "presentAlert(usuario)" *ngIf="this.usuarioLogueado.username !== usuario.username">
                           <ion-icon name="trophy-outline"></ion-icon>
@@ -92,18 +105,27 @@
                             <ion-list-header>
                               <b>Participantes:</b>
                             </ion-list-header>
-                            <ion-item>{{partida.organizador}}</ion-item>
-                            <ion-item *ngFor="let invitado of partida.invitados" lines="none">
-                              <ion-label>{{invitado}}</ion-label>
-                            </ion-item>
+                              <div id="scroll">
+                                <ion-item>{{partida.organizador}}</ion-item>
+                                <ion-item *ngFor="let invitado of partida.invitados" lines="none">
+                                  <ion-label>{{invitado}}</ion-label>
+                                </ion-item>
+                              </div>
+                            
                           </ion-list>
 
-                          <ion-item *ngIf="partida.ganador===undefined">
-                            <ion-label>Elegir Ganador</ion-label>
-                            <ion-select [(ngModel)]="this.ganador" placeholder="Acabar Partida" (ionChange)="setGanador(i)">
-                              <ion-select-option [value]=partida.organizador checked="false">{{partida.organizador}}</ion-select-option>
-                              <ion-select-option *ngFor="let jugador of partida.invitados" [value]=jugador checked="false">{{jugador}}</ion-select-option>
-                            </ion-select>
+                          <ion-item *ngIf="partida.ganador===undefined" lines="none">
+                            <ion-col size-xs="7" size-md="3">
+                              <ion-label><b>Elegir Ganador</b></ion-label>
+                            </ion-col>
+                            <ion-col size-xs="5" size-md="9">
+                              <ion-button expand="block" color="light">
+                                <ion-select [(ngModel)]="this.ganador" placeholder="Ganador" (ionChange)="setGanador(i)">
+                                  <ion-select-option [value]=partida.organizador checked="false">{{partida.organizador}}</ion-select-option>
+                                  <ion-select-option *ngFor="let jugador of partida.invitados" [value]=jugador checked="false">{{jugador}}</ion-select-option>
+                                </ion-select>
+                              </ion-button>
+                            </ion-col>
                           </ion-item>
 
                         </ion-card-content>
@@ -117,12 +139,18 @@
           <ion-row>
             <ion-col>
               <ion-card>
-                <ion-card-header><ion-card-title>Tus Torneos Activos</ion-card-title></ion-card-header>
+                <ion-card-header id="torneosCard"><ion-card-title>Tus Torneos Activos</ion-card-title></ion-card-header>
                 <ion-card-content>
                     <ion-list>
                       <ion-card *ngFor = "let torneo of this.listaTorneosActivos">
-                        <ion-card-header><b>{{torneo.nombre}}</b></ion-card-header>
+                        <ion-card-header>
+                          <ion-button fill="clear" color="dark" (click)="goTorneo(torneo)">
+                            <b>{{torneo.nombre}}</b>
+                          </ion-button>
+                          
+                        </ion-card-header>
                         <ion-card-content>
+                          <h1><ion-col size="auto"><ion-badge *ngIf="torneo.ganador==undefined && torneo.participantes.length < torneo.capacidad" color="success">Abierto</ion-badge><ion-badge *ngIf="torneo.ganador==undefined && torneo.participantes.length == torneo.capacidad" color="tertiary">En Curso</ion-badge><ion-badge *ngIf="torneo.ganador!==undefined" color="danger">Finalizado</ion-badge></ion-col></h1>
                           <ion-chip outline color="secondary">
                             <ion-label *ngIf="torneo.modo == 'i'">Individuales</ion-label>
                             <ion-label *ngIf="torneo.modo == 'd'">Dobles</ion-label>
@@ -150,55 +178,60 @@
                             <div id="scroll">
                               <ion-item *ngFor="let participante of torneo.participantes">
 
-                                  <!--ion-row>
-                                    <ion-col size="auto"><ion-chip>{{participante.nombre}}</ion-chip></ion-col>
-                                    <ion-col *ngIf="torneo.modo == 'd'" size="auto"><ion-chip>{{participante.pareja.nombre}}</ion-chip></ion-col>
-                                    <ion-col size="auto">Ranking: {{participante.ranking}}</ion-col>
-                                  </ion-row>
-                                  <ion-row>
-                                    <ion-col size="auto">Puntos: </ion-col>
-                                    <ion-col size="auto"><ion-badge color="tertiary">{{participante.puntos}}</ion-badge></ion-col>
-                                  </ion-row>
-                                  <ion-row>
-                                    <ion-col size="auto">Victorias: </ion-col>
-                                    <ion-col size="auto"><ion-badge color="success">{{participante.victorias}}</ion-badge></ion-col>
-                                  </ion-row>
-                                  <ion-row>
-                                    <ion-col size="auto">Derrotas: </ion-col>
-                                    <ion-col size="auto"><ion-badge color="danger">{{participante.victorias}}</ion-badge></ion-col>
-                                  </ion-row-->
+                                <!--ion-row>
+                                  <ion-col size="auto"><ion-chip>{{participante.nombre}}</ion-chip></ion-col>
+                                  <ion-col *ngIf="torneo.modo == 'd'" size="auto"><ion-chip>{{participante.pareja.nombre}}</ion-chip></ion-col>
+                                  <ion-col size="auto">Ranking: {{participante.ranking}}</ion-col>
+                                </ion-row>
+                                <ion-row>
+                                  <ion-col size="auto">Puntos: </ion-col>
+                                  <ion-col size="auto"><ion-badge color="tertiary">{{participante.puntos}}</ion-badge></ion-col>
+                                </ion-row>
+                                <ion-row>
+                                  <ion-col size="auto">Victorias: </ion-col>
+                                  <ion-col size="auto"><ion-badge color="success">{{participante.victorias}}</ion-badge></ion-col>
+                                </ion-row>
+                                <ion-row>
+                                  <ion-col size="auto">Derrotas: </ion-col>
+                                  <ion-col size="auto"><ion-badge color="danger">{{participante.victorias}}</ion-badge></ion-col>
+                                </ion-row-->
 
-                                  
-                                  <ion-col size="2"><ion-chip>{{participante.nombre}}</ion-chip></ion-col>
-                                  <ion-col *ngIf="torneo.modo == 'd'" size="2"><ion-chip>{{participante.pareja.nombre}}</ion-chip></ion-col>
-                                  <ion-col size="2"><strong>Ranking: {{participante.ranking}}</strong></ion-col>
+                                <ion-grid>
+                                  <ion-row>
+                                    <ion-col *ngIf="torneo.modo == 'i'" size="12" size-xs="12" size-sm="12" size-md="4" size-sm="12"><ion-chip>{{participante.nombre}}</ion-chip></ion-col>
+                                    <ion-col *ngIf="torneo.modo == 'd'" size="12" size-xs="6" size-sm="12" size-md="2" size-sm="12"><ion-chip>{{participante.nombre}}</ion-chip></ion-col>
+                                    <ion-col *ngIf="torneo.modo == 'd'" size="12" size-xs="6" size-sm="12" size-md="2" size-sm="12"><ion-chip>{{participante.pareja.nombre}}</ion-chip></ion-col>
+                                    
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12"><strong>Ranking:</strong></ion-col>
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12"><strong>{{participante.ranking}}</strong></ion-col> 
+    
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12">Puntos</ion-col>
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12"><ion-badge color="tertiary">{{participante.puntos}}</ion-badge></ion-col>
+                                    
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12">Victorias</ion-col>
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12"><ion-badge color="success">{{participante.victorias}}</ion-badge></ion-col>
+                                    
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12">Derrotas</ion-col>
+                                    <ion-col size="12" size-xs="6" size-sm="12" size-md="1" size-sm="12"><ion-badge color="danger">{{participante.victorias}}</ion-badge></ion-col>
+                                  </ion-row>     
+                                </ion-grid>
 
-                                  <ion-col size="1">Puntos</ion-col>
-                                  <ion-col size="1"><ion-badge color="tertiary">{{participante.puntos}}</ion-badge></ion-col>
-                                  
-                                  <ion-col size="1">Victorias</ion-col>
-                                  <ion-col size="1"><ion-badge color="success">{{participante.victorias}}</ion-badge></ion-col>
-                                  
-                                  <ion-col size="1">Derrotas</ion-col>
-                                  <ion-col size="1"><ion-badge color="danger">{{participante.victorias}}</ion-badge></ion-col>
-                                  
-
-                                  <!--tr>
-                                    <th>Participante</th>
-                                    <th *ngIf="torneo.modo == 'd'">Pareja</th>
-                                    <th>Ranking</th>
-                                    <th>Puntos</th>
-                                    <th>Victorias</th>
-                                    <th>Derrotas</th>
-                                  </tr>
-                                  <tr *ngFor="let participante of torneo.participantes">
-                                    <th><ion-chip>{{participante.nombre}}</ion-chip></th>
-                                    <th *ngIf="torneo.modo == 'd'"><ion-chip>{{participante.pareja.nombre}}</ion-chip></th>
-                                    <th>{{participante.ranking}}</th>
-                                    <th><ion-badge color="tertiary">{{participante.puntos}}</ion-badge></th>
-                                    <th><ion-badge color="success">{{participante.victorias}}</ion-badge></th>
-                                    <th><ion-badge color="danger">{{participante.victorias}}</ion-badge></th>
-                                  </tr-->
+                                <!--tr>
+                                  <th>Participante</th>
+                                  <th *ngIf="torneo.modo == 'd'">Pareja</th>
+                                  <th>Ranking</th>
+                                  <th>Puntos</th>
+                                  <th>Victorias</th>
+                                  <th>Derrotas</th>
+                                </tr>
+                                <tr *ngFor="let participante of torneo.participantes">
+                                  <th><ion-chip>{{participante.nombre}}</ion-chip></th>
+                                  <th *ngIf="torneo.modo == 'd'"><ion-chip>{{participante.pareja.nombre}}</ion-chip></th>
+                                  <th>{{participante.ranking}}</th>
+                                  <th><ion-badge color="tertiary">{{participante.puntos}}</ion-badge></th>
+                                  <th><ion-badge color="success">{{participante.victorias}}</ion-badge></th>
+                                  <th><ion-badge color="danger">{{participante.victorias}}</ion-badge></th>
+                                </tr-->
 
                               </ion-item>
                             </div>
