--- a/src/app/pages/main-tabs/usuarios/usuarios.page.html
+++ b/src/app/pages/main-tabs/usuarios/usuarios.page.html
@@ -161,7 +161,7 @@
               <ion-label> 
                 {{usuario.username}}
                 <h1><ion-badge color="secondary">{{usuario.ubicacion}}</ion-badge></h1>
-                <ion-chip outline color="dark">
+                <!-- <ion-chip outline color="dark">
                   <ion-label *ngIf="usuario.sexo == 'm'">Hombre</ion-label>
                   <ion-label *ngIf="usuario.sexo == 'f'">Mujer</ion-label>
                 </ion-chip>
@@ -173,13 +173,32 @@
                 </ion-chip>
                 <ion-chip outline color="success">
                   <ion-label>Valoración {{usuario.valoracion}}</ion-label>
-                </ion-chip>
+                </ion-chip> -->
+
+                <ion-grid>
+                  <ion-row>
+                    <ion-col size="12" size-xs="12" size-sm="12" size-md="auto" size-sm="12">
+                      <ion-label *ngIf="usuario.sexo == 'm'">Hombre |</ion-label>
+                      <ion-label *ngIf="usuario.sexo == 'f'">Mujer |</ion-label>
+                    </ion-col>
+                    <ion-col size="12" size-xs="12" size-sm="12" size-md="auto" size-sm="12">
+                      <ion-label>{{usuario.edad}} Años |</ion-label>
+                    </ion-col>
+                    <ion-col size="12" size-xs="12" size-sm="12" size-md="auto" size-sm="12">
+                      <ion-label>{{usuario.exp}} XP |</ion-label>
+                    </ion-col>
+                    <ion-col size="12" size-xs="12" size-sm="12" size-md="auto" size-sm="12">
+                      <ion-label>Valoración: {{usuario.valoracion}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+
               </ion-label>
-              <ion-button fill="clear" color="success" size="large" (click)= "presentAlert(usuario)" *ngIf="this.usuarioLogueado.username !== usuario.username">
-                <ion-icon name="add"></ion-icon>
+              <ion-button fill="clear" color="dark" size="large" (click)= "goUsuario(usuario)"  *ngIf="this.usuarioLogueado.username !== usuario.username">
+                <ion-icon slot="icon-only" name="enter-outline"></ion-icon>
               </ion-button>
-              <ion-button fill="clear" color="success" size="large" (click)= "goPerfil()" *ngIf="this.usuarioLogueado.username == usuario.username">
-                <ion-icon name="add"></ion-icon>
+              <ion-button fill="clear" color="dark" size="large" (click)= "goPerfil()" *ngIf="this.usuarioLogueado.username == usuario.username">
+                <ion-icon slot="icon-only" name="enter-outline"></ion-icon>
               </ion-button>
             </ion-item>
         </ion-list>
