--- a/src/app/pages/torneo-detail/torneo-detail.page.scss
+++ b/src/app/pages/torneo-detail/torneo-detail.page.scss
@@ -12,6 +12,11 @@
     margin-right: 8px;
 }
 #scroll{
-    height: 80px;
+    height: 85px;
     overflow-y: scroll;
+}
+#medal{
+    color:#7d4e19;
+    background-color: #FFD700;
+    background: #FFD700;
 }
