Arreglos Administrador de Torneos y error apuntarte a Torneo En Curso

--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -22,11 +22,13 @@
             <br>
             <ion-input type="text" class="form-control" placeholder="Organizador" required [(ngModel)]="organizador"></ion-input>
             <br>
-            <ion-input type="text" class="form-control" placeholder="Inscripción" required [(ngModel)]="inscripcion"></ion-input>
+            <ion-input type="number" min="0" class="form-control" placeholder="Inscripción" required [(ngModel)]="inscripcion"></ion-input>
             <br>
             <ion-input type="text" class="form-control" placeholder="Premio" required [(ngModel)]="premio"></ion-input>
             <br>
             <ion-input type="text" class="form-control" placeholder="Tipo de bola" required [(ngModel)]="tipobola"></ion-input>
+            <br>
+            <ion-input type="number" min="0" class="form-control" placeholder="Capacidad" required [(ngModel)]="capacidad"></ion-input>
             <br>
             <ion-input type="url" class="form-control" placeholder="Sitio web" required [(ngModel)]="sitioweb"></ion-input>
             <br>
