--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -123,7 +123,7 @@
 
 
                     <div>
-                      <ion-segment value="m" (ionChange)="generoSegmentChanged($event)">
+                      <ion-segment formControlName="sexo" value="m" (ionChange)="generoSegmentChanged($event)" [(ngModel)]="sexo">
                         <ion-segment-button value="m">
                           <ion-label>Hombre</ion-label>
                         </ion-segment-button>
